k8s/sheet-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sheet-cluster
  labels:
    app: sheet-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sheet-cluster
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: sheet-cluster
    spec:
      containers:
        - name: sheet-cluster
          image: <IMAGE>
          ports:
            - containerPort: 3000
              name: cluster-svc
            - containerPort: 34431
              name: cluster-rpc
            - containerPort: 9464
              name: cluster-met
          livenessProbe:
            httpGet:
              path: /live
              port: cluster-svc
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: cluster-svc
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /live
              port: cluster-svc
              scheme: HTTP
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 12
          volumeMounts:
            - name: sheet-cluster-ca-certificate
              readOnly: true
              mountPath: "/usr/local/share/ca-certificates/tiarastack"
            - name: sheet-cluster-tokens
              readOnly: true
              mountPath: "/var/run/secrets/tokens"
      serviceAccountName: sheet-cluster
      volumes:
        - name: sheet-cluster-ca-certificate
          configMap:
            name: sheet-cluster-ca-certificate
            items:
              - key: ca-certificate.crt
                path: tiarastack.crt
        - name: sheet-cluster-tokens
          projected:
            sources:
              - serviceAccountToken:
                  path: sheet-auth-token
                  expirationSeconds: 3600
                  audience: sheet-auth
---
apiVersion: v1
kind: Service
metadata:
  name: sheet-cluster-service
  labels:
    app: sheet-cluster
spec:
  ports:
    - name: cluster-svc
      protocol: TCP
      port: 80
      targetPort: cluster-svc
    - name: cluster-met
      protocol: TCP
      port: 9464
      targetPort: cluster-met
  selector:
    app: sheet-cluster
---
apiVersion: v1
kind: Service
metadata:
  name: sheet-cluster-runner
  labels:
    app: sheet-cluster
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: cluster-rpc
      protocol: TCP
      port: 34431
      targetPort: cluster-rpc
  selector:
    app: sheet-cluster
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sheet-cluster-service-ingress
spec:
  podSelector:
    matchLabels:
      app: sheet-cluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: sheet-ingress-server
      ports:
        - protocol: TCP
          port: cluster-svc
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: cluster-met
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sheet-cluster-cluster-rpc
spec:
  podSelector:
    matchLabels:
      app: sheet-cluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: sheet-cluster
      ports:
        - protocol: TCP
          port: cluster-rpc
